--- a/style/index.css
+++ b/style/index.css
@@ -16,7 +16,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
 margin: 0;  
 padding: 0;  
-border: 0;  
+/* border: 0;   */
 font-size: 100%;  
 font: inherit;  
 vertical-align: baseline;  
@@ -26,8 +26,11 @@ vertical-align: baseline;
 
 
 /* Heading */
-body {
+* {
     box-sizing:border-box;
     border:1px solid grey;
+    
 }
+
+
 
