--- a/style/index.css
+++ b/style/index.css
@@ -1,72 +1,134 @@
 /* Add CSS styling here */
 /* Add reset here */
 
-html, body, div, span, applet, object, iframe,  
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,  
-a, abbr, acronym, address, big, cite, code,  
-del, dfn, em, img, ins, kbd, q, s, samp,  
-small, strike, strong, sub, sup, tt, var,  
-b, u, i, center,  
-dl, dt, dd, ol, ul, li,  
-fieldset, form, label, legend,  
-table, caption, tbody, tfoot, thead, tr, th, td,  
-article, aside, canvas, details, embed,  
-figure, figcaption, footer, header, hgroup,  
-menu, nav, output, ruby, section, summary,  
-time, mark, audio, video {  
-margin: 0;  
-padding: 0;  
-/* border: 0;   */
-font-size: 100%;  
-font: inherit;  
-vertical-align: baseline;  
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
-
-
-
 
 /* General styles */
-* {
-    box-sizing:border-box;
-    border:1px solid grey;   
+header {
+  text-align: center;
+  padding: 15px;
 }
-
-body {
-    margin: auto;
-    
+h1 {
+  font-size: 2rem;
+  text-transform: uppercase;
+  margin-bottom: 15px;
 }
-section {
-
+nav a {
+  color: black;
+  border: 1px solid black;
+  padding: 0.5em 1.25em;
+  text-decoration: none;
+  margin: 0;
 }
-
-h1, h2, h3 {
-
+nav a:hover {
+  background-color: black;
+  color: white;
 }
-h1, h2 {
-    font-size: 36px;
-    font-weight: 300;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
-    padding:4%;
+nav {
+  display: flex;
+  justify-content: center;
 }
-p {
-    text-align: center;
-    padding:4%;
+.active {
+  background-color: black;
+  color: white;
 }
-
-
-.container {
-    display: flex;
-    justify-content: space-evenly;
+img {
+  max-width: 100%;
 }
-
-/*header section styles */
-
-.links {
-    padding: 4;
-    display: flex;
-    justify-content: center;
-    justify-content: space-around;
-    align-items: center;
+.images {
+  display: flex;
 }
-
+.images > * {
+  width: 20%;
+  margin: 1%;
+}
+footer {
+  text-align: center;
+}
